# LumaDeck

./: .editorconfig  .gitattributes  .gitignore  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  lumadeck.todo.md  manifest.yaml  pyproject.toml  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
consumer-repo-template/: .gitignore  README.md  device.yaml  secrets.example.yaml
docs/: architecture.md  authoring-a-layout.md  authoring-a-theme.md  authoring-a-widget.md  consumer-repo-guide.md  displays-with-io-expander-reset.md  icons.md  layout-contract.md  screen-sizes.md  theme-contract.md  touch-gestures.md  verifying-examples.md  widget-contract.md
examples/: lilygo-t-display-amoled.yaml  lilygo-test-rig.yaml  media-remote.yaml  room-controller.yaml  round-clock.yaml  secrets.example.yaml  square-light-clock.yaml  waveshare-1.85c.yaml
layouts/: _template.yaml  round_240.yaml  round_360.yaml  square_240.yaml  square_320.yaml  tall_240x320.yaml  tall_240x536.yaml  wide_480x320.yaml  wide_536x240.yaml
tests/: test_generate.py  test_validate.py
themes/: _template.yaml  dark.yaml  high_contrast.yaml  light.yaml  neon.yaml
tools/: generate.py  verify_examples.py
tools/lumadeck/: __init__.py  cli.py  contract.py  (+2 more)
widgets/: _template.yaml  album_art.yaml  analog_clock.yaml  clock.yaml  home_dashboard.yaml  icon_grid.yaml  light_button.yaml  media_card.yaml  nav_tabs.yaml  notification_sound.yaml  notification_toast.yaml  progress_ring.yaml  ring_slider.yaml  scene_button.yaml  status_bar.yaml  thermostat.yaml  weather.yaml
